apps/argocd/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`testnerdd.local`) && PathPrefix(`/argocd`)
      priority: 100
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`testnerdd.local`) && PathPrefix(`/argocd`) && Header(`Content-Type`, `application/grpc`)
      priority: 101
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
    # important: do not use a middleware to strip the prefix "/argocd" - it doesn't work
  tls:
    certResolver: default
